--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 		"lint": "prettier --check ."
 	},
 	"devDependencies": {
+		"@netlify/plugin-lighthouse": "^6.0.1",
 		"@sveltejs/adapter-auto": "^4.0.0",
 		"@sveltejs/adapter-netlify": "^4.4.1",
 		"@sveltejs/kit": "^2.16.0",
