--- a/package.json
+++ b/package.json
@@ -14,9 +14,8 @@
 		"lint": "prettier --check ."
 	},
 	"devDependencies": {
-		"@netlify/plugin-lighthouse": "^6.0.1",
 		"@sveltejs/adapter-auto": "^4.0.0",
-		"@sveltejs/adapter-netlify": "^4.4.1",
+		"@sveltejs/adapter-node": "^5.3.1"
 		"@sveltejs/kit": "^2.16.0",
 		"@sveltejs/vite-plugin-svelte": "^5.0.0",
 		"prettier": "^3.3.2",
