--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,3 @@
 # Backend API Configuration
-API_BASE_URL=
-
-# Development settings
-DEV_MODE=
+PUBLIC_API_BASE_URL=https://your-domain.nl/api
+PUBLIC_MEDIA_BASE_URL=https://your-domain.nl/
